// 声明 proto 使用的语法版本
syntax = "proto3";

// proto 包名
package common;

// golang 包名
option go_package = "./common";

// 枚举
// 在定义消息类型时，您可能希望它的某个字段仅具有一个预定义的值列表。例如，假设您想要为每个
// SearchRequest 添加一个 corpus 字段，其中正文可以是 UNIVERSAL、WEB、IMAGES、LOCAL、
// NEWS、PRODUCTS 或 VIDEO。为此，您只需在消息定义中添加 enum 并针对每个可能的值添加一个常量。

// 在以下示例中，我们添加了一个名为 Corpus 的 enum（包含所有可能的值）和 Corpus 类型的字段：
// 如您所见，Corpus 枚举的第一个常量映射到零：每个枚举定义必须包含一个映射到零的第一个常量作为其
// 第一个元素。原因如下：
//
// 1. 必须有一个零值，以便我们可以使用 0 作为数字的默认值。
// 2/ 零值必须是第一个元素，以便与 proto2 语义（其中第一个枚举值始终是默认值）兼容。
//
//enum Corpus {
//  CORPUS_UNSPECIFIED = 0;
//  CORPUS_UNIVERSAL = 1;
//  CORPUS_WEB = 2;
//  CORPUS_IMAGES = 3;
//  CORPUS_LOCAL = 4;
//  CORPUS_NEWS = 5;
//  CORPUS_PRODUCTS = 6;
//  CORPUS_VIDEO = 7;
//}

// 获取验证码请求
message GetCaptchaRequest {
  string type = 2;       // 验证码类型
}
message Result {
  string url = 1;
  string title = 2;
  repeated string snippets = 3;
}

// 嵌套类型
// 您可以在其他消息类型中定义和使用消息类型，如以下示例所示：Result 消息在 SearchResponse
// 消息中定义：
// 获取验证码响应
// 验证码数据
message GetCaptchaResponse {
  uint64 code = 1;      // 验证码ID
  string id = 2;           // id
  int64 expireTime = 3;      // 过期时间戳
  string img = 4;   // 验证码图片base64编码
  bool show = 5;   // 是否需要展示验证码
}
//获取菜单数据
message GetMenuRequest{
  uint64 user_id = 1;
  uint64 route_id = 2;
}
message GetMenuResponse {
    string data = 1;       // 菜单数据
}
// 定义服务
// 如果要将消息类型与 RPC（远程过程调用）系统配合使用，您可以在 .proto 文件中定义 RPC 服务接口，
// 协议缓冲区编译器会生成以您选择的语言编写的服务接口代码和存根。例如，如果您想使用接受 SearchRequest
//  并返回 SearchResponse 的方法定义 RPC 服务，可以在 .proto 文件中定义它，如下所示：
service CommonService {
  rpc GetCaptcha(GetCaptchaRequest) returns (GetCaptchaResponse);
  rpc GetMenu(GetMenuRequest) returns (GetMenuResponse);
}